--- a/app.json
+++ b/app.json
@@ -14,25 +14,32 @@
     },
     "ios": {
       "supportsTablet": true,
-      "package":"com.emmanuel-yegon.aora"
+      "package": "com.emmanuel-yegon.aora"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff",
-        "package":"com.emmanuel-yegon.aora"
-      }
+        "package": "com.emmanuel-yegon.aora"
+      },
+      "package": "com.manuyegon.aora"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "de452701-5b03-486f-a8bb-9155adbc779b"
+      }
     }
   }
 }
